# drift_watch

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  example_suite.yaml  pyproject.toml  railway.json  render.free.yaml  render.yaml
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
backend/: .env.example  Dockerfile  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: config.py  database.py  main.py  models.py  scheduler.py  scheduler_cron.py  schemas.py
backend/app/api/: routes.py
backend/app/services/: alerts.py  auth.py  billing.py  runs.py
backend/tests/: conftest.py  test_api_routes.py
backend/worker/: runner.py
docs/: architecture.md  operations.md
driftwatch/: __init__.py
driftwatch/cli/: main.py
driftwatch/core/: providers.py  suite_loader.py
driftwatch/eval/: assertions.py  engine.py  statistics.py
driftwatch/policy/: thresholds.py
frontend/: .env.development  .env.example  .env.production  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.tsbuildinfo  vercel.json
frontend/src/: App.tsx  api.ts  index.css  runTimestamps.ts  types.ts
frontend/src/components/: Layout.tsx  StatusBadge.tsx
infra/k8s/: api-deployment.yaml  configmap.yaml  frontend-deployment.yaml  ingress.yaml  namespace.yaml  secrets.yaml  worker-deployment.yaml
infra/prometheus/: prometheus.yml
infra/terraform/: main.tf  outputs.tf  variables.tf
tests/: test_assertions.py  test_suite_loader.py
(+9 files in other folders)
